Changed title of landing page

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css1/style.css' %}">
     <link rel="stylesheet" href="{% static 'css1/responsive.css' %}">
 
-    <title>Index</title>
+    <title>Attendance Portal</title>
     <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
@@ -83,7 +83,7 @@ https://templatemo.com/tm-528-elegance
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Attendance Portal</h1>
-                        <p class="animate" data-animate="fadeInUp"> “Positive student behavior support helps educators and parents appreciate good behavior, and motivates all students to achieve.”</p>
+                        <p class="animate" data-animate="fadeInUp"> “Positive student behavior helps educators and parents to appreciate good behavior, and motivates all students to achieve big.”</p>
                         <a href="{% url 'accounts:user_login' %}" class="main-stroked-button">Login</a><br><br>
                         <a href="{% url 'admin:index'%}" class="main-stroked-button">Admin Login</a>
                         <div class="scroll-down next-section animate data-animate=" fadeInUp"><img
@@ -105,7 +105,7 @@ https://templatemo.com/tm-528-elegance
                                             It facilitates to access the attendance information of a particular student
                                             in a particular class. </p>
                                         <p style="color: white;text-transform:inherit; font-size: 20px;">The purpose of
-                                            developing this is to computerized the traditional way of taking attendance.
+                                            developing this portal is to computerize the traditional way of taking attendance.
                                             Another purpose
                                             of developing this software is to generate the attendance report.
                                         </p>
